--- a/index.html
+++ b/index.html
@@ -1,130 +1,192 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Photon by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Photon by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+  <head>
+    <title>Katie Tensfeldt | Web Developer</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload">
+    <!-- Header -->
+    <section id="header">
+      <div class="inner">
+        <span class="icon solid major fa-code"></span>
+        <h1>
+          Hi, I'm <strong>Katie</strong>,<br />
+          a web developer.
+        </h1>
+        <p>
+          Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
+          lobortis feugiat sapien sed etiam volutpat accumsan.
+        </p>
+        <ul class="actions special">
+          <li><a href="#one" class="button scrolly">Discover</a></li>
+        </ul>
+      </div>
+    </section>
 
-		<!-- Header -->
-			<section id="header">
-				<div class="inner">
-					<span class="icon solid major fa-cloud"></span>
-					<h1>Hi, I'm <strong>Photon</strong>, another fine<br />
-					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
-					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
-					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
-					</ul>
-				</div>
-			</section>
+    <!-- One -->
+    <section id="one" class="main style1">
+      <div class="container">
+        <div class="row gtr-150">
+          <div class="col-6 col-12-medium">
+            <header class="major">
+              <h2>
+                A little about me:<br />
+                the good and the weird
+              </h2>
+            </header>
+            <p>
+              I'm a web developer from San Diego County. When I'm not working on
+              a project, you will most likely find me on one of the many hiking
+              trails around my home, on my yoga mat, at a local brewery or doing
+              something nerdy. I love Dungeons and Dragons, taking care of my
+              plants, or rewatching some of my favorite (usually quite nerdy)
+              movies or shows.
+            </p>
+          </div>
+          <div class="col-6 col-12-medium imp-medium">
+            <span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+          </div>
+        </div>
+      </div>
+    </section>
 
-		<!-- One -->
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
-						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-						</div>
-					</div>
-				</div>
-			</section>
+    <!-- Two -->
+    <section id="two" class="main style2">
+      <div class="container">
+        <div class="row gtr-150">
+          <div class="col-6 col-12-medium">
+            <ul class="major-icons">
+              <li>
+                <span class="icon solid style1 major fa-journal-whills"></span>
+              </li>
+              <li><span class="icon solid style2 major fa-hiking"></span></li>
+              <li>
+                <span class="icon solid style3 major fa-seedling"></span>
+              </li>
+              <li><span class="icon solid style4 major fa-beer"></span></li>
+              <li>
+                <span class="icon solid style5 major fa-laptop-code"></span>
+              </li>
+              <li><span class="icon solid style6 major fa-dice-d20"></span></li>
+            </ul>
+          </div>
+          <div class="col-6 col-12-medium">
+            <header class="major">
+              <h2>
+                Working and learning history<br />
+                Where I've been, what I've done
+              </h2>
+            </header>
+            <p>
+              I graduated in 2015 with a Bachelor's of Science in Hospitality
+              Management. I spend the next 5 years working in the hospitality
+              industry, learning the values of communication, honesty and
+              efficiency. Those 5 years bred skills of team-work, leadership,
+              and a willingness to learn beyond my job title.
+            </p>
+            <p>
+              Blandit faucibus proin. Ac aliquam integer adipiscing enim non
+              praesent vis commodo nunc phasellus cubilia ac risus accumsan.
+              Accumsan blandit. Lobortis phasellus non lobortis dit varius mi
+              varius accumsan lobortis. Blandit ante aliquam lacinia lorem
+              lobortis semper morbi col faucibus vitae integer placerat accumsan
+              orci eu mi odio tempus adipiscing adipiscing adipiscing curae
+              consequat feugiat etiam dolore.
+            </p>
+            <p>
+              Adipiscing a commodo ante nunc accumsan interdum mi ante
+              adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus
+              nascetur ac non. Lorem curae eu ante amet sapien in tempus ac.
+              Adipiscing id accumsan adipiscing ipsum.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-		<!-- Two -->
-			<section id="two" class="main style2">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
-							</ul>
-						</div>
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-						</div>
-					</div>
-				</div>
-			</section>
+    <!-- Three -->
+    <section id="three" class="main style1 special">
+      <div class="container">
+        <header class="major">
+          <h2>All the projects</h2>
+        </header>
+        <p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+        <div class="row gtr-150">
+          <div class="col-4 col-12-medium">
+            <span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+            <h3>Magna feugiat lorem</h3>
+            <p>
+              Adipiscing a commodo ante nunc magna lorem et interdum mi ante
+              nunc lobortis non amet vis sed volutpat et nascetur.
+            </p>
+            <ul class="actions special">
+              <li><a href="#" class="button">More</a></li>
+            </ul>
+          </div>
+          <div class="col-4 col-12-medium">
+            <span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+            <h3>Magna feugiat lorem</h3>
+            <p>
+              Adipiscing a commodo ante nunc magna lorem et interdum mi ante
+              nunc lobortis non amet vis sed volutpat et nascetur.
+            </p>
+            <ul class="actions special">
+              <li><a href="#" class="button">More</a></li>
+            </ul>
+          </div>
+          <div class="col-4 col-12-medium">
+            <span class="image fit"
+              ><img src="images/journal.jpeg" alt="pen and paper"
+            /></span>
+            <h3>Learning and Work Journal</h3>
+            <p>
+              An online journal documenting my weekly learnings and projects,
+              starting with my first full week in Actualize bootcamp.
+            </p>
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://gist.github.com/katietensfeldt/d42d413f3c8ca6e859ddd717616c74c8"
+                  target="_blank"
+                  class="button"
+                  >Read it</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
-		<!-- Three -->
-			<section id="three" class="main style1 special">
-				<div class="container">
-					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
-					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
-					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
+    <!-- Four -->
+    <section id="four" class="main style2 special">
+      <div class="container">
+        <header class="major">
+          <h2>Want to reach me?</h2>
+        </header>
+        <p>Sed lacus nascetur ac ante amet sapien.</p>
+        <ul class="actions special">
+          <li><a href="#" class="button wide primary">Sign Up</a></li>
+          <li><a href="#" class="button wide">Learn More</a></li>
+        </ul>
+      </div>
+    </section>
 
-		<!-- Four -->
-			<section id="four" class="main style2 special">
-				<div class="container">
-					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
-					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button wide primary">Sign Up</a></li>
-						<li><a href="#" class="button wide">Learn More</a></li>
-					</ul>
-				</div>
-			</section>
-
-		<!-- Five -->
-		<!--
+    <!-- Five -->
+    <!--
 			<section id="five" class="main style1">
 				<div class="container">
 					<header class="major special">
@@ -441,27 +503,53 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 		-->
 
-		<!-- Footer -->
-			<section id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</section>
+    <!-- Footer -->
+    <section id="footer">
+      <ul class="icons">
+        <li>
+          <a
+            href="https://www.linkedin.com/in/kathleentensfeldt/"
+            target="_blank"
+            class="icon brands alt fa-linkedin"
+            ><span class="label">LinkedIn</span></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/k10sfeldt/"
+            target="_blank"
+            class="icon brands alt fa-instagram"
+            ><span class="label">Instagram</span></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://github.com/katietensfeldt"
+            target="_blank"
+            class="icon brands alt fa-github"
+            ><span class="label">GitHub</span></a
+          >
+        </li>
+        <li>
+          <a
+            href="mailto:kmtensfeldt@gmail.com"
+            class="icon solid alt fa-envelope"
+            ><span class="label">Email</span></a
+          >
+        </li>
+      </ul>
+      <ul class="copyright">
+        <li>&copy; Katie Tensfeldt</li>
+        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+      </ul>
+    </section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
