Fixes issue with apostrophe visibility

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="inner">
         <span class="icon solid major fa-code"></span>
         <h1>
-          Hi, I'm <strong>Katie</strong>,<br />
+          Hi, I&#39;m <strong>Katie</strong>,<br />
           a web developer.
         </h1>
         <p>
@@ -48,12 +48,12 @@
               </h2>
             </header>
             <p>
-              I'm a web developer from San Diego County. When I'm not working on
-              a project, you will most likely find me on one of the many hiking
-              trails around my home, on my yoga mat, at a local brewery or doing
-              something nerdy. I love Dungeons and Dragons, taking care of my
-              plants, or rewatching some of my favorite (usually quite nerdy)
-              movies or shows.
+              I&#39;m a web developer from San Diego County. When I&#39;m not
+              working on a project, you will most likely find me on one of the
+              many hiking trails around my home, on my yoga mat, at a local
+              brewery or doing something nerdy. I love Dungeons and Dragons,
+              taking care of my plants, or rewatching some of my favorite
+              (usually quite nerdy) movies or shows.
             </p>
           </div>
           <div class="col-6 col-12-medium imp-medium">
@@ -87,15 +87,15 @@
             <header class="major">
               <h2>
                 Working and learning history<br />
-                Where I've been, what I've done
+                Where I&#39;ve been, what I&#39;ve done
               </h2>
             </header>
             <p>
-              I graduated in 2015 with a Bachelor's of Science in Hospitality
-              Management. I spend the next 5 years working in the hospitality
-              industry, learning the values of communication, honesty and
-              efficiency. Those 5 years bred skills of team-work, leadership,
-              and a willingness to learn beyond my job title.
+              I graduated in 2015 with a Bachelor&#39;s of Science in
+              Hospitality Management. I spend the next 5 years working in the
+              hospitality industry, learning the values of communication,
+              honesty and efficiency. Those 5 years bred skills of team-work,
+              leadership, and a willingness to learn beyond my job title.
             </p>
             <p>
               Blandit faucibus proin. Ac aliquam integer adipiscing enim non
