--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             </p>
           </div>
           <div class="col-6 col-12-medium imp-medium">
-            <span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+            <span class="image fit"
+              ><img src="images/profile.jpg" alt="Photo of Katie Tensfeldt"
+            /></span>
           </div>
         </div>
       </div>
