Changes colors and adds more content

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           a web developer.
         </h1>
         <p>
-          Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-          lobortis feugiat sapien sed etiam volutpat accumsan.
+          Life isn&#39;t about finding yourself. Life is about<br />
+          creating yourself. - George Bernard Shaw
         </p>
         <ul class="actions special">
           <li><a href="#one" class="button scrolly">Discover</a></li>
@@ -93,7 +93,7 @@
               </h2>
             </header>
             <p>
-              I graduated in 2015 with a Bachelor&#39;s of Science in
+              I graduated college in 2015 with a Bachelor&#39;s of Science in
               Hospitality Management. I spend the next 5 years working in the
               hospitality industry, learning the values of communication,
               honesty and efficiency. Those 5 years bred skills of team-work,
@@ -128,14 +128,26 @@
         <p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
         <div class="row gtr-150">
           <div class="col-4 col-12-medium">
-            <span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-            <h3>Magna feugiat lorem</h3>
+            <span class="image fit">
+              <!-- Image needs to be updated -->
+              <img
+                src="https://images.unsplash.com/photo-1522199755839-a2bacb67c546?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGNvbW1lcmNlJTIwd2Vic2l0ZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+                alt="computer on desk"
+            /></span>
+            <h3>Mini Capstone Project</h3>
             <p>
-              Adipiscing a commodo ante nunc magna lorem et interdum mi ante
-              nunc lobortis non amet vis sed volutpat et nascetur.
+              An evolving e-commerce website that sells all of my favorite
+              things.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">More</a></li>
+              <li>
+                <a
+                  href="https://github.com/katietensfeldt/mini-capstone-api"
+                  target="_blank"
+                  class="button"
+                  >See Source Code</a
+                >
+              </li>
             </ul>
           </div>
           <div class="col-4 col-12-medium">
@@ -179,10 +191,13 @@
         <header class="major">
           <h2>Want to reach me?</h2>
         </header>
-        <p>Sed lacus nascetur ac ante amet sapien.</p>
+        <p>Click below to send me an email.</p>
         <ul class="actions special">
-          <li><a href="#" class="button wide primary">Sign Up</a></li>
-          <li><a href="#" class="button wide">Learn More</a></li>
+          <li>
+            <a href="mailto:kmtensfeldt@gmail.com" class="button wide primary"
+              ><span class="icon solid alt fa-envelope"></span> Email Me</a
+            >
+          </li>
         </ul>
       </div>
     </section>
@@ -530,13 +545,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
             target="_blank"
             class="icon brands alt fa-github"
             ><span class="label">GitHub</span></a
-          >
-        </li>
-        <li>
-          <a
-            href="mailto:kmtensfeldt@gmail.com"
-            class="icon solid alt fa-envelope"
-            ><span class="label">Email</span></a
           >
         </li>
       </ul>
