Updates site content to remove all filler text

--- a/index.html
+++ b/index.html
@@ -100,19 +100,20 @@
               leadership, and a willingness to learn beyond my job title.
             </p>
             <p>
-              Blandit faucibus proin. Ac aliquam integer adipiscing enim non
-              praesent vis commodo nunc phasellus cubilia ac risus accumsan.
-              Accumsan blandit. Lobortis phasellus non lobortis dit varius mi
-              varius accumsan lobortis. Blandit ante aliquam lacinia lorem
-              lobortis semper morbi col faucibus vitae integer placerat accumsan
-              orci eu mi odio tempus adipiscing adipiscing adipiscing curae
-              consequat feugiat etiam dolore.
+              I began pursuing web development in 2020 with a course of self
+              study that lasted about a year. After a year of learning front end
+              development, I joined Actualize Coding Bootcamp to fill in some
+              gaps and learn back end development. For the front end, I
+              currently know JavaScript frameworks React and Vue, as well as
+              SASS/SCSS and HTML5. For the back end, I am comfortable with Ruby
+              on Rails. Other technologies and concepts I am familiar with
+              include UI/UX Design, SQL, Git and GitHub, Test Driven
+              Development.
             </p>
             <p>
-              Adipiscing a commodo ante nunc accumsan interdum mi ante
-              adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus
-              nascetur ac non. Lorem curae eu ante amet sapien in tempus ac.
-              Adipiscing id accumsan adipiscing ipsum.
+              I am always looking to learn more and grow beyond my current
+              status. I am looking forward to learning more back end
+              technologies in the near future, such as GraphQL and MongoDB.
             </p>
           </div>
         </div>
@@ -125,12 +126,72 @@
         <header class="major">
           <h2>All the projects</h2>
         </header>
-        <p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+        <p>
+          Here's what I've been up to. Some of the things I want to show off.
+        </p>
         <div class="row gtr-150">
           <div class="col-4 col-12-medium">
             <span class="image fit">
               <!-- Image needs to be updated -->
               <img
+                src="https://images.unsplash.com/photo-1522199755839-a2bacb67c546?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGNvbW1lcmNlJTIwd2Vic2l0ZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+                alt="computer on desk"
+            /></span>
+            <h3>Mini Capstone Project</h3>
+            <p>
+              An evolving e-commerce website that sells all of my favorite
+              things.
+            </p>
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/katietensfeldt/mini-capstone-api"
+                  target="_blank"
+                  class="button"
+                  >See Source Code</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-4 col-12-medium">
+            <span class="image fit"
+              ><img
+                src="https://images.unsplash.com/photo-1616138984641-ae05293798c6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1054&q=80"
+                alt="Monstera Plant"
+            /></span>
+            <h3>Capstone Project</h3>
+            <p>Here will live information on my upcoming capstone project.</p>
+            <ul class="actions special">
+              <li><a href="#" class="button">See Source Code</a></li>
+            </ul>
+          </div>
+          <div class="col-4 col-12-medium">
+            <span class="image fit"
+              ><img src="images/journal.jpeg" alt="pen and paper"
+            /></span>
+            <h3>Learning and Work Journal</h3>
+            <p>
+              An online journal documenting my weekly learnings and projects,
+              starting with my first full week in Actualize bootcamp.
+            </p>
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://gist.github.com/katietensfeldt/d42d413f3c8ca6e859ddd717616c74c8"
+                  target="_blank"
+                  class="button"
+                  >Read it</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Row possibly to add for new projects -->
+        <!-- <div class="row gtr-150">
+          <div class="col-4 col-12-medium">
+            <span class="image fit">
+              <!-- Image needs to be updated -->
+        <!-- <img
                 src="https://images.unsplash.com/photo-1522199755839-a2bacb67c546?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fGNvbW1lcmNlJTIwd2Vic2l0ZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                 alt="computer on desk"
             /></span>
@@ -181,7 +242,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
