Updates capstone link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           - George Bernard Shaw
         </p>
         <ul class="actions special">
-          <li><a href="#one" class="button scrolly">Discover</a></li>
+          <li><a href="#one" class="button scrolly">Learn More</a></li>
         </ul>
       </div>
     </section>
@@ -127,6 +127,7 @@
             </span>
             <h3>Mini Capstone Project</h3>
             <p>An evolving e-commerce website that sells all of my favorite things.</p>
+            <small>Technologies: Rails</small>
             <ul class="actions special">
               <li>
                 <a href="https://github.com/katietensfeldt/mini-capstone-api" target="_blank" class="button">
@@ -137,15 +138,20 @@
           </div>
           <div class="col-4 col-12-medium">
             <span class="image fit">
-              <img
-                src="https://images.unsplash.com/photo-1616138984641-ae05293798c6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1054&q=80"
-                alt="Monstera Plant"
-              />
+              <img src="images/film.jpg" alt="Film reel" />
             </span>
-            <h3>Capstone Project</h3>
-            <p>Here will live information on my upcoming capstone project.</p>
+            <h3>Movie Drop</h3>
+            <p>
+              Full stack capstone project from Actualize bootcamp. Solves the problem of forgetting what movie a friend
+              recommended.
+            </p>
+            <small>Technologies: Rails &#38; Vue.js</small>
             <ul class="actions special">
-              <li><a href="#" class="button">See Source Code</a></li>
+              <li>
+                <a href="https://github.com/katietensfeldt/movie-drop-backend" class="button" target="_blank">
+                  See Source Code
+                </a>
+              </li>
             </ul>
           </div>
           <div class="col-4 col-12-medium">
