Adds capstone video to projects

--- a/index.html
+++ b/index.html
@@ -138,19 +138,22 @@
           </div>
           <div class="col-4 col-12-medium">
             <span class="image fit">
-              <img src="images/film.jpg" alt="Film reel" />
+              <img src="images/movie-drop.png" alt="Film reel" />
             </span>
             <h3>Movie Drop</h3>
             <p>
               Full stack capstone project from Actualize bootcamp. Solves the problem of forgetting what movie a friend
-              recommended.
+              recommended
+              <br />
+              <a href="https://movie-drop.netlify.app/" target="_blank">Visit deployed site</a>
+              |
+              <a href="https://github.com/katietensfeldt/movie-drop-backend" target="_blank">See Source Code</a>
             </p>
+
             <small>Technologies: Rails &#38; Vue.js</small>
             <ul class="actions special">
               <li>
-                <a href="https://github.com/katietensfeldt/movie-drop-backend" class="button" target="_blank">
-                  See Source Code
-                </a>
+                <a href="https://youtu.be/y3j8GHP4ZzY?t=958" class="button" target="_blank">See live presentation</a>
               </li>
             </ul>
           </div>
