Update to current doings

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   <head>
     <title>Katie Tensfeldt | Web Developer</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
     <link rel="shortcut icon" type="image/jpg" href="images/icon.png" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
   </head>
   <body class="is-preload">
     <!-- Header -->
@@ -47,14 +52,18 @@
               <h2>A little about me:</h2>
             </header>
             <p>
-              I&#39;m a web developer from San Diego County. When I&#39;m not working on a project, you will most likely
-              find me on one of the many hiking trails around my home, on my yoga mat, at a local brewery or doing
-              something nerdy. I love Dungeons and Dragons, taking care of my plants, or rewatching some of my favorite
-              (usually quite nerdy) movies or shows.
+              I&#39;m a software engineer from San Diego County. When I&#39;m
+              not working on a project, you will most likely find me on one of
+              the many hiking trails around my home, on my yoga mat, at a local
+              brewery or crocheting yet another amigurumi octopus. I love
+              Dungeons and Dragons, taking care of my plants, or rewatching some
+              of my favorite movies or shows.
             </p>
           </div>
           <div class="col-6 col-12-medium imp-medium">
-            <span class="image fit"><img src="images/profile.jpg" alt="Photo of Katie Tensfeldt" /></span>
+            <span class="image fit"
+              ><img src="images/profile.jpg" alt="Photo of Katie Tensfeldt"
+            /></span>
           </div>
         </div>
       </div>
@@ -89,20 +98,28 @@
               </h2>
             </header>
             <p>
-              I graduated college in 2015 with a Bachelor&#39;s of Science in Hospitality Management. I spend the next 5
-              years working in the hospitality industry, learning the values of communication, honesty and efficiency.
-              Those 5 years bred skills of team-work, leadership, and a willingness to learn beyond my job title.
+              I graduated college in 2015 with a Bachelor&#39;s of Science in
+              Hospitality Management. I spend the next 5 years working in the
+              hospitality industry, learning the values of communication,
+              honesty and efficiency. Those 5 years bred skills of team-work,
+              leadership, and a willingness to learn beyond my job title.
             </p>
             <p>
-              I began pursuing web development in 2020 with a course of self study that lasted about a year. After a
-              year of learning front end development, I joined Actualize Coding Bootcamp to fill in some gaps and learn
-              back end development. For the front end, I currently know JavaScript frameworks React and Vue, as well as
-              SASS/SCSS and HTML5. For the back end, I am comfortable with Ruby on Rails. Other technologies and
-              concepts I am familiar with include UI/UX Design, SQL, Git and GitHub, Test Driven Development.
+              I began pursuing web development in 2020 with a course of self
+              study that lasted about a year. After a year of learning front end
+              development, I joined Actualize Coding Bootcamp to fill in some
+              gaps and learn back end development. I am comfortable with
+              JavaScript frameworks React and Vue, as well as SASS/SCSS and
+              HTML5. For the back end, I am all about Ruby on Rails. Other
+              technologies and concepts I am familiar with include UI/UX Design,
+              SQL, Git and GitHub, Test Driven Development. Lately I am all
+              things GraphQL, having recently received a certification with
+              Apollo.
             </p>
             <p>
-              I am always looking to learn more and grow beyond my current status. I am looking forward to learning more
-              back end technologies in the near future, such as GraphQL and MongoDB.
+              I am always looking to learn more and grow beyond my current
+              status. I am looking forward to learning more back end
+              technologies in the near future.
             </p>
           </div>
         </div>
@@ -115,7 +132,9 @@
         <header class="major">
           <h2>All the projects</h2>
         </header>
-        <p>Here's what I've been up to. Some of the things I want to show off.</p>
+        <p>
+          Here's what I've been up to. Some of the things I want to show off.
+        </p>
         <div class="row gtr-150">
           <div class="col-4 col-12-medium">
             <span class="image fit">
@@ -126,11 +145,18 @@
               />
             </span>
             <h3>Mini Capstone Project</h3>
-            <p>An evolving e-commerce website that sells all of my favorite things.</p>
+            <p>
+              An evolving e-commerce website that sells all of my favorite
+              things.
+            </p>
             <small>Technologies: Rails</small>
             <ul class="actions special">
               <li>
-                <a href="https://github.com/katietensfeldt/mini-capstone-api" target="_blank" class="button">
+                <a
+                  href="https://github.com/katietensfeldt/mini-capstone-api"
+                  target="_blank"
+                  class="button"
+                >
                   See Source Code
                 </a>
               </li>
@@ -142,27 +168,40 @@
             </span>
             <h3>Movie Drop</h3>
             <p>
-              Full stack capstone project from Actualize bootcamp. Solves the problem of forgetting what movie a friend
-              recommended
+              Full stack capstone project from Actualize bootcamp. Solves the
+              problem of forgetting what movie a friend recommended
               <br />
-              <a href="https://movie-drop.netlify.app/" target="_blank">Visit deployed site</a>
+              <a href="https://movie-drop.netlify.app/" target="_blank"
+                >Visit deployed site</a
+              >
               |
-              <a href="https://github.com/katietensfeldt/movie-drop-backend" target="_blank">See Source Code</a>
+              <a
+                href="https://github.com/katietensfeldt/movie-drop-backend"
+                target="_blank"
+                >See Source Code</a
+              >
             </p>
 
             <small>Technologies: Rails &#38; Vue.js</small>
             <ul class="actions special">
               <li>
-                <a href="https://youtu.be/y3j8GHP4ZzY?t=958" class="button" target="_blank">See live presentation</a>
+                <a
+                  href="https://youtu.be/y3j8GHP4ZzY?t=958"
+                  class="button"
+                  target="_blank"
+                  >See live presentation</a
+                >
               </li>
             </ul>
           </div>
           <div class="col-4 col-12-medium">
-            <span class="image fit"><img src="images/journal.jpeg" alt="pen and paper" /></span>
+            <span class="image fit"
+              ><img src="images/journal.jpeg" alt="pen and paper"
+            /></span>
             <h3>Learning and Work Journal</h3>
             <p>
-              An online journal documenting my weekly learnings and projects, starting with my first full week in
-              Actualize bootcamp.
+              An online journal documenting my weekly learnings and projects,
+              starting with my first full week in Actualize bootcamp.
             </p>
             <ul class="actions special">
               <li>
@@ -672,17 +711,29 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
     <section id="footer">
       <ul class="icons">
         <li>
-          <a href="https://www.linkedin.com/in/kathleentensfeldt/" target="_blank" class="icon brands alt fa-linkedin">
+          <a
+            href="https://www.linkedin.com/in/kathleentensfeldt/"
+            target="_blank"
+            class="icon brands alt fa-linkedin"
+          >
             <span class="label">LinkedIn</span>
           </a>
         </li>
         <li>
-          <a href="https://www.instagram.com/k10sfeldt/" target="_blank" class="icon brands alt fa-instagram">
+          <a
+            href="https://www.instagram.com/k10sfeldt/"
+            target="_blank"
+            class="icon brands alt fa-instagram"
+          >
             <span class="label">Instagram</span>
           </a>
         </li>
         <li>
-          <a href="https://github.com/katietensfeldt" target="_blank" class="icon brands alt fa-github">
+          <a
+            href="https://github.com/katietensfeldt"
+            target="_blank"
+            class="icon brands alt fa-github"
+          >
             <span class="label">GitHub</span>
           </a>
         </li>
